--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
+    <style name="AppTheme" parent="Base.Theme.DesignDemo">
     </style>
 
-
+    <style name="Base.Theme.DesignDemo" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/theme_color</item>
+        <item name="colorPrimaryDark">@color/color_black</item>
+        <item name="colorAccent">#4078c0</item>
+        <item name="android:windowBackground">@color/window_background</item>
+    </style>
 
 
 </resources>
