--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/friend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffffff"
