--- a/app/src/main/res/layout/item_userslist.xml
+++ b/app/src/main/res/layout/item_userslist.xml
@@ -4,10 +4,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dip">
+    android:layout_margin="5dip">
 
     <LinearLayout
         style="@style/Widget.CardContent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -16,10 +18,12 @@
             android:src="@mipmap/ic_launcher"
             android:layout_width="40dip"
             android:layout_height="40dip"
-            android:layout_marginRight="16dp"/>
+            android:layout_marginRight="20dp"/>
 
         <TextView
             android:id="@+id/name"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
