make all request with token to get 5000 request-time

--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -21,6 +21,8 @@
     <TextView
         android:id="@+id/failTxt"
         android:text="@string/fail_load"
+        android:gravity="center"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
