--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -60,17 +60,49 @@
                 android:orientation="horizontal">
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/repoWrap"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:id="@+id/followerWrap"
-                    android:layout_marginRight="@dimen/card_margin"
                     android:layout_weight="1">
 
                     <LinearLayout
                         style="@style/Widget.CardContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/repoNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dip"
+                            android:text="24"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Respositroy"
+
+                            />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/followerWrap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal">
+
+                    <LinearLayout
+                        style="@style/Widget.CardContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
                         android:orientation="vertical">
 
                         <TextView
@@ -94,8 +126,6 @@
                     android:id="@+id/followingWrap"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-
                     android:layout_weight="1">
 
                     <LinearLayout
@@ -109,6 +139,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dip"
+                            android:layout_gravity="center_horizontal"
                             android:text="24"
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
@@ -117,7 +148,7 @@
                             android:layout_height="wrap_content"
                             android:text="Following"
 
-                             />
+                            />
 
                     </LinearLayout>
 
@@ -134,25 +165,27 @@
 
                 <LinearLayout
                     style="@style/Widget.CardContent"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Friends"
+                        android:text="FFFFF"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="hfhfhfhfeese_ipsum" />
+                        android:text="Starred"
+                        />
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/emailWrap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/card_margin"
@@ -161,19 +194,24 @@
 
                 <LinearLayout
                     style="@style/Widget.CardContent"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Related"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                        android:id="@+id/iconEmail"
+                        android:layout_width="20dip"
+                        android:layout_height="20dip"
+                        android:textSize="15dip"
+                        style="@style/ListIcon"
+                        android:text="@string/icon_email" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="skkkkkkkeese_ipsum" />
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:text="Email"
+                        />
 
                 </LinearLayout>
 
