--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -402,11 +402,14 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/relation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="40dip"
         android:clickable="true"
         android:src="@mipmap/ic_headset"
+        android:hapticFeedbackEnabled="true"
+        app:rippleColor="@color/color_ripple"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end" />
 
