--- a/app/src/main/res/layout/activity_repo.xml
+++ b/app/src/main/res/layout/activity_repo.xml
@@ -63,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:text="0"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 
@@ -80,6 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:text="0"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
 
