--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -370,7 +370,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Blog"
+                        android:text="Join"
                         android:layout_toRightOf="@id/iconJoinTime"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
