--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -78,7 +78,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dip"
-                            android:text="24"
+                            android:text=""
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <TextView
@@ -111,7 +111,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="5dip"
-                            android:text="24"
+                            android:text=""
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <TextView
@@ -141,7 +141,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginBottom="5dip"
-                            android:text="24"
+                            android:text=""
                             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                         <TextView
