--- a/app/src/main/res/menu/menu_reop.xml
+++ b/app/src/main/res/menu/menu_reop.xml
@@ -2,6 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.quinn.githubknife.ui.activity.RepoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_star"
+        android:orderInCategory="100"
+        android:title="star"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_fork"
+        android:orderInCategory="99"
+        android:title="Fork"
+        app:showAsAction="always" />
+
+
 </menu>
