--- a/app/src/main/res/menu/menu_user_info.xml
+++ b/app/src/main/res/menu/menu_user_info.xml
@@ -2,6 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.quinn.githubknife.ui.activity.UserInfoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="99"
+        android:icon="@mipmap/ic_action_reload"
+        android:title="@string/action_refresh"
+        app:showAsAction="always" />
 </menu>
