--- a/app/src/main/res/layout/item_reposlist.xml
+++ b/app/src/main/res/layout/item_reposlist.xml
@@ -4,6 +4,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_margin="5dip">
 
     <LinearLayout
