--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -182,7 +182,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@id/iconStar"
-                        android:text="Starred" />
+                        android:text="Starred"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        />
 
 
 
